--- a/login/mindset-training.html
+++ b/login/mindset-training.html
@@ -27,8 +27,8 @@
 		</div>
 		<div class="side-nav">
 			<h4><a href="member-area.html">Member Area</a></h4>
-			<h4 class="active"><a href="cara-memulai.html">Cara Memulai</a></h4>
-			<h4><a href="mindset-training.html">Mindset Training</a></h4>
+			<h4><a href="cara-memulai.html">Cara Memulai</a></h4>
+			<h4 class="active"><a href="mindset-training.html">Mindset Training</a></h4>
 			<h4><a href="skill-training.html">Skill Training</a></h4>
 			<h4><a href="product-knowledge">Product Knowledge</a></h4>
 			<div class="bottom">
